// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no dimensions and given URI 1`] = `
<View
  onLayout={[Function]}
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "http://example.com/image.jpg",
      }
    }
    style={
      Array [
        Object {},
        Object {
          "height": 0,
          "width": 0,
        },
      ]
    }
  />
</View>
`;

exports[`sets the expected dimensions for a given state 1`] = `
<View
  onLayout={[Function]}
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "http://example.com/image.jpg",
      }
    }
    style={
      Array [
        Object {},
        Object {
          "height": 300,
          "width": 100,
        },
      ]
    }
  />
</View>
`;
